2000-01-10  Philip Blundell  <philb@gnu.org>

	* doc/c-arm.texi (ARM Options): Fix typo.
 	(ARM-Chars): Correct description of `#'.  Mention  that `;' is a 
	line separator for Linux.
	* doc/as.texinfo (Comments): Mention the ARM.

2000-01-10  Philip Blundell  <pb@futuretv.com>

	* configure.in (arm*-*-conix*): New target.
	(arm*-*-linux-gnu*): Match instead of arm-*-linux* and
	armv*-*-linux-gnu.
	* configure: Regenerate.

2000-01-03  Martin v. Loewis  <loewis@informatik.hu-berlin.de>

	* config/obj-elf.c (elf_pseudo_table): Define visibility pseudos.
	(obj_elf_visibility): New function.
	
	* doc/as.texinfo (Visibility): New node: document visibility
	pseudo ops.

1999-12-27  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (MATCH): Relax JumpAbsolute check.  Emit a
	warning for absolute jump/call without `*' in non-intel mode.  No
	need to set i.types[0] JumpAbsolute in intel mode.

1999-12-22  Philip Blundell  <pb@futuretv.com>

	* config/tc-arm.c (arm_s_text): If OBJ_ELF, call the appropriate
	hook function when changing sections.
	(arm_s_data): Likewise.

1999-12-14  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (md_parse_option): Add support for -marm720
	command line switch.

Tue Nov 30 22:59:00 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-mn10300.c (md_pseudo_table): Add ".am33" pseudo-op.
	(r_registers, xr_registers): Define.
	(r_register_name, xr_register_name): New functions.
	(md_assemble): Handle new am33 operand types and instruction
	formats.
	(mn10300_insert_operand, check_operand): Likewise.

1999-11-29  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (thumb_mode): Turn into a tristate variable.
	(s_force_thumb): Set thumb_mode to 2.
	(md_assemble): Do not complain about thumb instructions on a
	non-thumb target if thumb_mode is set to 2.

1999-11-28  Michael Meissner  <meissner@cygnus.com>

	* config/tc-alpha.c (toplevel): Include struc-symbol.h.
	(alpha_macro_arg): Add MACRO_{LITERAL,BASE,BYTOFF,JSR} cases.